# kona

./: .gitignore  Cargo.toml  diff.txt  diff2.txt  justfile  x.json
.github/workflows/: ci.yaml  zkvm_compile.yaml
book/: custom.css
book/src/sdk/: custom-backend.md  fpvm-backend.md  intro.md
crates/common/: CHANGELOG.md  Cargo.toml
crates/common-proc/: CHANGELOG.md
crates/common/src/: io.rs  lib.rs  types.rs
crates/derive/: CHANGELOG.md  Cargo.toml
crates/derive-alloy/: CHANGELOG.md
crates/derive/src/: lib.rs
crates/driver/: CHANGELOG.md
crates/driver/src/: core.rs
crates/executor/: CHANGELOG.md  Cargo.toml
crates/executor/src/: lib.rs
crates/mpt/: CHANGELOG.md  Cargo.toml
crates/mpt/benches/: trie_node.rs
crates/mpt/src/: fetcher.rs  lib.rs  list_walker.rs  node.rs  noop.rs  retrieval.rs  test_util.rs
crates/plasma/: CHANGELOG.md
crates/plasma/src/: lib.rs
crates/preimage/: CHANGELOG.md  Cargo.toml
crates/preimage/src/: hint.rs  key.rs  lib.rs  oracle.rs  pipe.rs  traits.rs
crates/primitives/: CHANGELOG.md  Cargo.toml
crates/primitives/src/: block_info.rs  (+4 more)
crates/providers/: CHANGELOG.md
crates/providers-alloy/: CHANGELOG.md
crates/zkvm/: Cargo.toml
crates/zkvm-common/: Cargo.toml
crates/zkvm-common/src/: hasher.rs
crates/zkvm/src/: lib.rs
data/: 000030.sst  IDENTITY  LOG  LOG.old.1732923205881525  LOG.old.1732923504262557  LOG.old.1732923626358846  LOG.old.1732923662871081  LOG.old.1732923685880617  LOG.old.1732923704573472  MANIFEST-000032
elf/: riscv32im-succinct-zkvm-elf
examples/trusted-sync/: Cargo.toml
(+65 files in other folders)
